--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -466,7 +466,7 @@
         </div>
 
         <div>
-          <div
+          <!-- <div
             class="font-grey__font-eight__700"
             style="
               margin-bottom: 0.3rem;
@@ -476,12 +476,12 @@
             "
           >
             Share:
-          </div>
+          </div> -->
 
           <div
             style="display: flex; justify-content: center; padding-top: 0rem"
           >
-            <div
+            <!-- <div
               class="icon-container"
               style="margin: 0 0.5rem"
               data-bs-toggle="modal"
@@ -598,7 +598,7 @@
               "
             >
               &nbsp;
-            </div>
+            </div> -->
 
             <div
               style="
@@ -612,12 +612,12 @@
             >
               <div style="font-size: 1.3em; cursor: pointer">
                 <button
+                (click)="nextPage()"
                   type="button"
                   class="text-end-view mx-1"
                   style="padding: 0.6em; width: 7rem"
-                  routerLink="/home/lms/ind/proposal/summary"
                 >
-                  Completes
+                  Complete
                 </button>
               </div>
             </div>
