--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -1,85 +1,109 @@
 <div class="mx-4 mt-3">
     <p class="title">Quotations:Client Details </p>
     <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+    <form [formGroup]="quotationForm">
     <div class="card mb-4">
         <div class="card-body">
           <h6>Quotation Details </h6>
-          <p>Quotation:</p>
           <div class="row mb-4 mt-3">
             <div class="col-xl-4">
+                <label for=""class="quote-label">Source<span class="required" ></span></label>
+                <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="source"  placement="right" >
+                    <option selected="true" disabled="disabled"></option>
+                    <option value="walkin">Walk In </option>
+                    <option value="email">Email</option>
+                    <option value="broker">Broker/Agent</option>
+
+                  </select >
+
+            </div>
+            
+            <div class="col-xl-4">
                 <label for=""class="quote-label">Client<span class="required"></span></label>
-                <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="clientCode" readonly>
             </div>
             <div class="col-xl-4">
                 <label for=""class="quote-label">Branch<span class="required" ></span></label>
-                <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="branch" placement="right" >
+                    <option selected="true" disabled="disabled"></option> 
+                    <option *ngFor="let data of branch"  [value]="data.id">{{data.name}}</option>
+                </select>  
             </div>
-            <div class="col-xl-4">
-                <label for=""class="quote-label">Currency<span class="required"></span></label>
-                <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
-            </div>
+           
           </div>
           <div class="row mb-4">
             <div class="col-xl-4">
+                <label for=""class="quote-label">Currency<span class="required"></span></label>
+                <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="currencyCode" placement="right" >
+                    <option selected="true" disabled="disabled"></option> 
+                    <option *ngFor="let data of currency"  [value]="data.id">{{data.name}}</option>
+                </select> 
+            </div>
+            <div class="col-xl-4">
                 <label for=""class="quote-label">Quotation Expiry Date</label>
-                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveToDate">
             </div>
             <div class="col-xl-4">
                 <label for=""class="quote-label">Request for quote date</label>
-                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveFromDate">
             </div>
-            <div class="col-xl-4">
-                <label for=""class="quote-label">Product<span class="required"></span></label>
-                <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
-
-            </div>
+           
           </div>
-          <p class="more" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">More Details</p>
+          <div class="row mb-4">
+
+            <div class="col-xl-8"></div>
+          </div>
+         
           <div class="collapse" id="collapseExample">
            
             <div class="row mb-4">
                 <div class="col-xl-4">
-                    <label for=""class="quote-label">Email</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                    <label for=""class="quote-label">Quotation Type</label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="proInterfaceType">
 
                 </div>
                 <div class="col-xl-4">
-                    <label for=""class="quote-label">Phone Number</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                    <label for=""class="quote-label">Introducer</label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" >
                 </div>
                 <div class="col-xl-4">
-                    <label for=""class="quote-label">Category</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                    <label for=""class="quote-label">Likelihood</label>
+                    <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  placement="right" >
+                        <option selected="true" disabled="disabled"></option>
+                        <option value="likely">Likely</option>
+                        <option value="unlikely">Unlikely</option>
+                        
+    
+                      </select >
                 </div>
             </div>
             <div class="row mb-4">
                 <div class="col-xl-4">
-                    <label for=""class="quote-label">Cover Period</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                    <label for=""class="quote-label">Results from campaign </label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" >
 
                 </div>
                 <div class="col-xl-4">
-                    <label for=""class="quote-label">Use of Vehicle</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                    <label for=""class="quote-label">Multi-user entry?</label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" >
                 </div>
                 <div class="col-xl-4">
-                    <label for=""class="quote-label">Self-declared value</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                    <label for=""class="quote-label">Internal comments </label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1">
                 </div>
             </div>
             <div class="row mb-4">
                 <div class="col-xl-4">
-                    <label for=""class="quote-label">Year of Manufacture</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                    <label for=""class="quote-label">External comments </label>
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1">
 
                 </div>
-                <div class="col-xl-4">
-                    <label for=""class="quote-label">Car Reg No.</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
-                </div>
+    
+ 
               
             </div>
           </div>
+          <p class="more" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">More Details</p>
         </div>
     </div>
     <div class="card mb-4">
@@ -88,11 +112,14 @@
           <div class="row mt-3 mb-3">
             <div class="col-xl-4">
                 <label for=""class="quote-label">Product</label>
-                <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                <select class="form-select form-select-sm mb-1" id="quote-input" formControlName="productCode" placement="right" >
+                    <option selected="true" disabled="disabled"></option> 
+                    <option *ngFor="let data of products"  [value]="data.code">{{data.description}}</option>
+                </select> 
             </div>
             <div class="col-xl-4">
                 <label for=""class="quote-label">Payment Frequency</label>
-                <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName=""  placement="right" >
+                <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="fequencyOfPayment"  placement="right" >
                     <option selected="true" disabled="disabled"></option>
                     <option value="Annually">Annually</option>
                     <option value="Semi Annually">Semi Annually</option>
@@ -105,27 +132,57 @@
 
             <div class="col-xl-4">
                 <label for=""class="quote-label">Cover time</label>
-                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">
+                <input type="date" id="quote-input" class="form-control form-control-sm mb-1" >
             </div>
           </div>
           <div>
-            <p>Import risks <input type="checkbox" class="ml-3"></p>
+            <p class="mb-4">Import risks <input type="checkbox" class="ml-3"></p>
             
+            <p class="more" data-bs-toggle="collapse" data-bs-target="#collapseProductClauses" >Product Clauses</p>
+            <div class="collapse" id="collapseProductClauses">
+                <p-table 
+                [value]="clauses"
+                [resizableColumns]="true" 
+                styleClass="p-datatable-sm"
 
+                class='ui-datatable' 
+                [tableStyle]="{ 'min-width': '50rem' }">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Select</th>
+                            <th>Heading</th>
+                            <th>Wording</th>
+                            <th>Editable</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-clause>
+                        <tr>
+                            <td>
+                                <p-tableCheckbox [value]="clause"></p-tableCheckbox>
+                            </td>
+                            <td>{{ clause.heading }}</td>
+                            <td style="width:10%" >{{ clause.wording }}</td>
+                            <td>{{ clause.is_editable }}</td>
+                            
+                        </tr>
+                    </ng-template>
+                </p-table>
+              </div>
           </div>
         </div>
     </div>
 
-
-
-    
-    <div class="row">
-     
-        <div class="col-xl-6 ">
-            <button class="btn btn-primary quote-btn float-end">Assign Tasks</button>
-        </div>
-        <div class="col-xl-6">
-            <button class="btn btn-primary float-end">Next</button>
-        </div>
+</form>
+    <div class="float-end mb-4">
+        <button class="btn btn-primary">Assign Tasks</button>
+        <button class="btn btn-primary ">Next</button>
     </div>
+    
+     
+           
+              
+            
+        
+    
+       
 </div>
