--- a/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.css
@@ -22,9 +22,10 @@ font-weight: 500;
 line-height: 24px;
 }
 .content{
-    color: #000;
+color: #000;
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px; 
+cursor:pointer
 }
