--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
@@ -44,3 +44,14 @@
 .move {
   cursor: move;
 }
+/*.res {
+  resize: both;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-body {
+  flex: 1;
+  overflow: auto;
+}*/
