--- a/src/app/features/crm/components/country/country.component.css
+++ b/src/app/features/crm/components/country/country.component.css
@@ -12,6 +12,14 @@ label {
     font-weight: 500;
 }
 
+.form-group .form-select {
+    border-radius: 8px;
+}
+
+.form-group .form-control {
+    border-radius: 8px;
+}
+
 .custom-input {
     width: 80%;
     border-radius: 8px;
@@ -22,17 +30,15 @@ label {
     background-color: #E4E7EB;
     color: #00529B;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     text-align: center;
-    line-height: 30px;
+    line-height: 40px;
     margin-right: 10px;
 }
 
 .btn-tab {
-    /* border-radius: 5px; */
     margin-right: 10px;
-    /* border: 2px solid #00000033; */
     background-color: #fff;
     color: black;
     border: none;
@@ -44,16 +50,10 @@ label {
     text-align: left;
 }
 
-.btn-tab.active {
-    /* background-color: #00529b; */
-    color: #00529b;
-    /* border-color: #00529b; */
-    text-decoration: underline;
+::ng-deep .p-dropdown .p-dropdown-filter {
+    height: 35px;
 }
 
-ul,
-li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.custom-table {
+    cursor: pointer;
 }
